fix mobile layout bug

--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ html {
 body {
     font-family: 'kumbh sans';
     font-size: 12px;
-    padding: 0 3em 0 3em;
+    padding: 0 1em 0 1em;
     background-image: linear-gradient(hsl(273, 75%, 66%), hsl(240, 73%, 65%));
 }
 
@@ -25,6 +25,52 @@ h1 {
     transform: rotate(180deg);
   }
 
+.bold-text {
+    font-weight:bold;
+}
+
+#main-content {
+    margin: 15em 1em 5em 1em;
+    background-color: white;
+    padding: 1.5em;
+    max-width: 500px;
+}
+
+.rounded-corners {
+    border-radius: 15px;
+}
+
+label:hover {
+    cursor: pointer;
+}
+
+input{
+    display: none;
+}
+
+.question-content {
+    display: none;
+}
+
+input:checked + label + .question-content{
+    display: block;
+}
+
+label{
+    display: block;
+    border-top: solid 1px lightgray;
+    margin: 0 0 1em 0;
+    padding-top: 1em;
+}
+
+span {
+    float:right;
+}
+
+#label1 {
+    border: none;
+}
+
 /*Desktop layout*/
 @media (min-width: 930px) {
 
@@ -38,7 +84,7 @@ h1 {
         display: grid;
         grid-template-columns: 1fr 1fr;
         max-width: 80em;
-        height: 32em;
+        height: auto;
         overflow: hidden;
     }
 
@@ -67,7 +113,7 @@ h1 {
         width: 118px;
         z-index: +1;
         height: 146px;
-        margin-left: -46px;
+        margin-left: -60px;
         margin-top: 100px;
         background-image: url(images/illustration-box-desktop.svg);
         background-position: -27px 16px;
@@ -108,44 +154,3 @@ h1 {
     }
 
   }
-
-#main-content {
-    margin: 15em 2em 5em 2em;
-    background-color: white;
-    padding: 1.5em;
-}
-
-.rounded-corners {
-    border-radius: 15px;
-}
-
-label:hover {
-    cursor: pointer;
-}
-
-input{
-    display: none;
-}
-
-.question-content {
-    display: none;
-}
-
-input:checked + label + .question-content{
-    display: block;
-}
-
-label{
-    display: block;
-    border-top: solid 1px lightgray;
-    margin: 0 0 1em 0;
-    padding-top: 1em;
-}
-
-span {
-    float:right;
-}
-
-#label1 {
-    border: none;
-}
